# keymapper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  install.sh  keymapper.service.template  setup_linux.sh  setup_windows.ps1
.github/workflows/: release.yml
daemon/: Cargo.toml  build.rs
daemon/src/: main.rs
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
