[package]
name = "keymapper-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../../shared" }
anyhow = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to an HTTP URL
custom-protocol = ["tauri/custom-protocol"]
