[package]
name = "keymapper-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shared = { path = "../../shared" }
anyhow = "1.0"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
